config: fix baseurl
Signed-off-by: Longp(Mike) <nimisolo@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 languageCode = "en-us"
 title = "Are you kidding?"
-baseurl = "http://example.org/"
+baseurl = "https://nimisolo.github.io/"
 
 [Params]
     Author = "Longp(Mike)"
