--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
-languageCode = "en-us"
+languageCode = "zh-cn"
 title = "Are you kidding?"
 baseurl = "https://nimisolo.github.io/"
+canonifyurls = true
 
 [Params]
     Author = "Longp(Mike)"
