config: update config
Signed-off-by: Longp(Mike) <nimisolo@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 languageCode = "zh-cn"
 title = "Are you kidding?"
 baseurl = "https://nimisolo.github.io/"
-canonifyurls = true
+hasCJKLanguage = true
 
 [Params]
     Author = "Longp(Mike)"
